--- a/show/static/show/home.css
+++ b/show/static/show/home.css
@@ -2,9 +2,20 @@ body {
     overflow-x: hidden;
     /* padding-top: 56px; */
     width: 100%;
-    background-color: #000000;
+    background-color: #F9FEEA;
+    font-family: 'Jeju Gothic', sans-serif;
   }
   
+.h1 .h2 .h3 .h4 .p {
+  font-family: 'Jeju Gothic', sans-serif;
+  font-family: 
+}
+
+.detail {
+  font-size: 20px;
+}
+
+
   #sidebar-wrapper {
     min-height: 100vh;
     margin-left: -15rem;
@@ -29,6 +40,8 @@ body {
   
   #wrapper.toggled #sidebar-wrapper {
     margin-left: 0;
+    position: fixed;
+    top: 0;
   }
   
   @media (min-width: 768px) {
