--- a/show/templates/show/base.html
+++ b/show/templates/show/base.html
@@ -21,8 +21,7 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'show/home.css' %}" rel="stylesheet" type="text/css">
 
-    <link href = "http://fonts/googleapis.com/earlyaccess/jejugothic.css" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
    
 </head>
 <!--head end-->
@@ -35,31 +34,41 @@
     <div class="d-flex" id="wrapper">
 
         <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
+        <div style="background-color: #78C2AD" id="sidebar-wrapper">
             <div class="sidebar-heading"><strong>ShowTime</strong></div>
-            <div class="list-group list-group-flush">
-                <a href="{% url 'exhibition_home' %}" class="list-group-item list-group-item-action bg-light">Exhibition</a>
-                <a href="{% url 'classic_home' %}" class="list-group-item list-group-item-action bg-light">Classic</a>
-                <a href="{% url 'musical_home' %}" class="list-group-item list-group-item-action bg-light">Musical</a>
-                <a href="{% url 'concert_home' %}" class="list-group-item list-group-item-action bg-light">Concert</a>
+            <div class="list-group list-group-flush" >
+                <a href="{% url 'exhibition_home' %}" class="list-group-item list-group-item-action"style="background-color: #78C2AD">Exhibition</a>
+                <a href="{% url 'classic_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Classic</a>
+                <a href="{% url 'musical_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Musical</a>
+                <a href="{% url 'concert_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Concert</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle"><span class="navbar-toggler-icon"></span></button>
+            <nav class="navbar navbar-expand-lg navbar-dark border-bottom" style="background-color: #78C2AD">
+                <button class="myButton" id="menu-toggle"><span class="navbar-toggler-icon"></span></button>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-                       
+                            {% if user.is_active %}
+                            
+                            <div style="margin-right: 30px;">
+                                <a href="{% url 'home' %}"><button type="button" class="myButton">홈으로</button></a>
+                                <a href="{% url 'logout' %}"><button type="button" class="myButton">로그아웃</button></a>
+                            </div>
+                            {% else %}
+                            <div style="margin-right: 30px;">
+                                <a href="{% url 'home' %}"><button type="button" class="myButton">홈으로</button></a>
+                                <a href="{% url 'accounts:signup' %}"><button type="button" class="myButton" >회원가입</button></a>
+                                <a href="{% url 'login' %}"><button type="button" class="myButton">로그인</button></a>
+                            </div>
+                            {% endif %}
                         
                         </li>
                     </ul>
