--- a/show/templates/show/base.html
+++ b/show/templates/show/base.html
@@ -37,10 +37,10 @@
         <div style="background-color: #78C2AD" id="sidebar-wrapper">
             <div class="sidebar-heading"><strong>ShowTime</strong></div>
             <div class="list-group list-group-flush" >
-                <a href="{% url 'exhibition_home' %}" class="list-group-item list-group-item-action"style="background-color: #78C2AD">Exhibition</a>
-                <a href="{% url 'classic_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Classic</a>
-                <a href="{% url 'musical_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Musical</a>
-                <a href="{% url 'concert_home' %}" class="list-group-item list-group-item-action" style="background-color: #78C2AD">Concert</a>
+                <a href="{% url 'exhibition' %}" class="list-group-item list-group-item-action"style="background-color: #78C2AD">Exhibition</a>
+                <a href="{% url 'classic' %}"  class="list-group-item list-group-item-action" style="background-color: #78C2AD">Classic</a>
+                <a href="{% url 'musical' %}"  class="list-group-item list-group-item-action" style="background-color: #78C2AD">Musical</a>
+                <a href="{% url 'concert' %}"  class="list-group-item list-group-item-action" style="background-color: #78C2AD">Concert</a>
             </div>
         </div>
         <!-- /#sidebar-wrapper -->
@@ -101,3 +101,4 @@
 </body>
 
 </html>
+
