--- a/show/templates/show/home.html
+++ b/show/templates/show/home.html
@@ -1,4 +1,4 @@
-﻿{% extends "show/base.html" %}
+{% extends "show/base.html" %}
 
 {% block content %}
     <div class="row">
@@ -32,18 +32,19 @@
 
         <div class="row">
 
-                    {% for musical in musicals.all %}
+                    {% for post in posts.all %}
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
-                            {% if musical.image %}
-                            <a href="{% url 'musical_detail' musical.id %}"><img class="card-img-top" src="{{ musical.image.url }}" alt="" height=300></a>
+                            {% if post.image %}
+                            <a href="{% url 'detail' post.id %}"><img class="card-img-top" src="{{ post.image.url }}" alt="" height=300></a>
                             {% endif %}
                             <div class="card-body">
                                 <h4 class="card-title">
-                                <a href="{% url 'musical_detail' musical.id %}" style="color: green;">{{ musical.title }}</a>
+                                <a href="{% url 'detail' post.id %}" style="color: green;">{{ post.title }}</a>
                                 </h4>
-                                <h5> {{musical.date}}</h5>
-                                <h5>{{musical.place1}}</h5>
+                                <h5> {{post.category}}</h5>
+                                <h5> {{post.date}}</h5>
+                                <h5>{{post.place1}}</h5>
                                 <p class="card-text"></p>
                             </div>
                             <div class="card-footer">
