--- a/show/templates/show/concert.html
+++ b/show/templates/show/concert.html
@@ -33,7 +33,7 @@
         <div class="row">
                     {% for post in posts.all %}
                         {{post.category}}
-                        {% if post.category == "뮤지컬" %}
+                        {% if post.category == 뮤지컬 %}
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="card h-100">
                                     {% if post.image %}
