막바지를 향해

--- a/show/templates/show/concert.html
+++ b/show/templates/show/concert.html
@@ -29,34 +29,27 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
-
-        <div class="row">
-                    {% for post in posts.all %}
-                        {{post.category}}
-                        {% if post.category == 뮤지컬 %}
-                            <div class="col-lg-4 col-md-6 mb-4">
-                                <div class="card h-100">
-                                    {% if post.image %}
-                                    <a href="{% url 'detail' post.id %}"><img class="card-img-top" src="{{ post.image.url }}" alt="" height=300></a>
-                                    {% endif %}
-                                    <div class="card-body">
-                                        <h4 class="card-title">
-                                        <a href="{% url 'detail' post.id %}" style="color: green;">{{ post.title }}</a>
-                                        </h4>
-                                        <h5> 카테고리 : {{post.category}}</h5>
-                                        <h5> {{post.date}}</h5>
-                                        <h5>{{post.place1}}</h5>
-                                        <p class="card-text"></p>
-                                    </div>
-                                    <div class="card-footer">
-                                        <small class="text-muted"></small>
-                                    </div>
-                                </div>
-                            </div>
+        {% for post in concerts %}
+            <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        {% if post.image %}
+                        <a href="{% url 'detail' post.id %}"><img class="card-img-top" src="{{ post.image.url }}" alt="" height=300></a>
                         {% endif %}
-                    {% endfor %}
-                   
+                        <div class="card-body">
+                            <h4 class="card-title">
+                            <a href="{% url 'detail' post.id %}" style="color: green;">{{ post.title }}</a>
+                            </h4>
+                            <h5> 카테고리 : {{post.category}}</h5>
+                            <h5> {{post.date}}</h5>
+                            <h5>{{post.place1}}</h5>
+                            <p class="card-text"></p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted"></small>
+                        </div>
+                    </div>
                 </div>
+        {% endfor %}
             </div>
 
         </div>
